Fix for dupe tags in cases & properly position tag window z-index

--- a/static/css/sheets.css
+++ b/static/css/sheets.css
@@ -1999,7 +1999,7 @@ a.tagit-close {
 
 .diagramTagWindow {
   	position: absolute;
-	z-index: 2;
+	z-index: 3;
 	width: 320px;
 	background-color: #f9f9f7;
 	border-radius: 3px;
